@@ -1,7 +1,7 @@
 // This configuration should work on FreeBSD, OpenBSD, and Linux.
 // It should produce a stream of tun-ok printouts if all goes well.
 
-tun :: Tun(tun, 1.0.0.1, 255.0.0.0);
+tun :: Tun(1.0.0.1, 255.0.0.0);
 
 ICMPSendPings(1.0.0.2, 1.0.0.1) ->
   EtherEncap(0x0800, 1:1:1:1:1:1, 2:2:2:2:2:2) ->
